refactored the homepage removed absolute positioning fixed navbar to expand vertically when toggler is clicked on mobile - satisfied

--- a/styles.css
+++ b/styles.css
@@ -118,11 +118,7 @@
   
   /*Header 
   ==========================================*/
-  #header-home {
-    z-index: 2;
-    height: 30px;
-    top: 40px;
-  }
+
   #logo {
     width: 168px;
     height: 30px;
@@ -133,16 +129,6 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-    }
-    .navbar-nav {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      top: calc(50% + 50px);
-    }
-    .navbar-nav li a {
-      width: 100%;
-      text-align: center;
     }
   }
   #logo-smile {
@@ -257,7 +243,7 @@
   .stars p {
     font-size: var(--font-size-text-sm);
     font-weight: var(--font-weight-lreg);
-    line-height: var(--line-height-wide); /* 192.857% */
+    line-height: var(--line-height-wide);
   }
   /* Free membership */
   #membership h1 {
@@ -370,8 +356,8 @@ tr:last-child td {
   ==========================*/
 #courses-header {
   background: url(images/courses-banner.png) center/cover no-repeat;
-  background-attachment: fixed;
 }
+
 .nav-link:hover {
   border-bottom: 2px solid var(--color-white);
 }
